[package]
name = "exit_status"
version = "0.1.0"
authors = ["ducaale <sharaf.13@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version="1.0", features=["full", "extra-traits"] }
quote = "1.0"

[dev-dependencies]
macrotest = "1.0"
anyhow = "1.0"
