[package]
name = "exit_status"
version = "0.1.0"
authors = ["ducaale <sharaf.13@hotmail.com>"]
edition = "2018"
license = "MIT"
description = "Simple proc-macro for enabling rust main function to return an exit status code"
documentation = "https://github.com/ducaale/exit_status"
homepage = "https://github.com/ducaale/exit_status"
repository = "https://github.com/ducaale/exit_status"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version="1.0", features=["full"] }
quote = "1.0"

[dev-dependencies]
macrotest = "1.0"
anyhow = "1.0"
